--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,10 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@mux/mux-node": "^5.0.0-rc.1",
+    "dotenv": "^16.0.0",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.14.1"
+    "firebase-functions": "^3.18.1"
   },
   "devDependencies": {
     "eslint": "^7.6.0",
