--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   video_stream: ^0.0.1
   video_player: ^2.3.0
   wakelock: ^0.6.1+2
+  firebase_core: ^1.13.1
+  cloud_functions: ^3.2.10
+  firebase_auth: ^3.3.11
 
 dev_dependencies:
   flutter_test:
@@ -76,12 +79,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: GoogleSans
+      fonts:
+        - asset: fonts/GoogleSans-Regular.ttf
+        - asset: fonts/GoogleSans-Medium.ttf
+        - asset: fonts/GoogleSans-Bold.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
