--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   firebase_core: ^1.13.1
   cloud_functions: ^3.2.10
   firebase_auth: ^3.3.11
+  intl: ^0.17.0
+  font_awesome_flutter: ^9.2.0
+  permission_handler: ^9.2.0
+  cloud_firestore: ^3.1.10
+  # pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
