--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,7 @@ dependencies:
   intl: ^0.17.0
   font_awesome_flutter: ^9.2.0
   permission_handler: ^9.2.0
-  cloud_firestore: ^3.1.10
-  # pull_to_refresh: ^2.0.0
+  # cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
